[package]
name = "freebee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
itertools = "0.10.3"
rand = "0.8.5"

[lib]
name = "freebee"
path = "src/lib.rs"

[[bin]]
name = "freebee-cli"
path = "src/cli/main.rs"

[[bin]]
name = "freebee-http"
path = "src/http/main.rs"